Reactivate timetable snapshot source test